applications/Jellyfin/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - master1
                      - master2
      containers:
        - name: jellyfin
          image: liukunup/jellyfin:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8096
              name: http
              protocol: TCP
            - containerPort: 8920
              name: https
              protocol: TCP
            # Service Discovery
            - containerPort: 1900
              protocol: UDP
            # Client Discovery
            - containerPort: 7359
              protocol: UDP
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 2000m
              memory: 4Gi
          volumeMounts:
            - mountPath: /data/media
              name: media
            - mountPath: /config
              name: config
            - mountPath: /cache
              name: cache
      volumes:
        - name: media
          nfs:
            path: /Multimedia/Media
            server: 192.168.100.72
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
      restartPolicy: Always
