applications/Jellyfin/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  ports:
    - port: 8096
      targetPort: http
      protocol: TCP
  selector:
    app: jellyfin
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-backup
  labels:
    app: jellyfin
spec:
  ports:
    - port: 8096
      targetPort: http
      nodePort: 30000
  selector:
    app: jellyfin
  type: NodePort
