applications/Jellyfin/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  rules:
  - host: jellyfin.homelab.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jellyfin
            port:
              number: 8096
